added first/last names

--- a/PA6.qmd
+++ b/PA6.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Practice Activity 6"
-author: "Javi, Josh, Ryan, Tarj"
+author: "Tarj Mecwan, Ryan Vu, Javi Zialcita, Joshua Winn"
 format: html
 embed-resources: true
 editor: visual
